--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -179,18 +179,53 @@ font-4 = "LigaHack Nerd Font Mono:style=Medium:size=7;3"
 [bar/top]
 inherit = bar/main
 
-modules-left = menu title right-end-top
-modules-center = left-end-bottom workspaces right-end-top left-end-bottom colors-switch right-end-top
-modules-right = left-end-top temperature checknetwork right-end-bottom left-end-top date sysmenu
-enable-ipc = true
-
-[bar/bottom]
-inherit = bar/main
-bottom = true
-
+;modules-left = menu title right-end-top
 modules-left = weather right-end-bottom left-end-top cpu_bar memory_bar filesystem_bar right-end-bottom
-modules-right = left-end-bottom network right-end-top left-end-bottom pulseaudio
+modules-center = left-end-bottom workspaces right-end-top left-end-bottom colors-switch right-end-top
+modules-right = left-end-top temperature right-end-bottom left-end-top network right-end-bottom left-end-top date sysmenu
 enable-ipc = true
+
+;[bar/bottom]
+;inherit = bar/main
+;bottom = true
+
+;modules-left = weather right-end-bottom left-end-top cpu_bar memory_bar filesystem_bar right-end-bottom
+;modules-right = left-end-bottom network right-end-top left-end-bottom pulseaudio
+;enable-ipc = true
+; Position of the system tray window
+; If empty or undefined, tray support will be disabled
+; NOTE: A center aligned tray will cover center aligned modules
+;
+; Available positions:
+;   left
+;   center
+;   right
+;   none
+tray-position = right
+;tray-reparent = true
+
+; If true, the bar will not shift its
+; contents when the tray changes
+;tray-detached = false
+
+; Tray icon max size
+;tray-maxsize = 16
+
+; Background color for the tray container 
+; ARGB color (e.g. #f00, #ff992a, #ddff1023)
+; By default the tray container will use the bar
+; background color.
+tray-background = ${color.bg}
+
+; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
+;tray-offset-x = 0
+;tray-offset-y = 0
+
+; Pad the sides of each tray icon
+tray-padding = 0
+
+; Scale factor for tray clients
+;tray-scale = 1.0
 
 ;; layout 
 [layout]
@@ -221,47 +256,6 @@ dim-value = 1.0
 ; Locale used to localize various module data (e.g. date)
 ; Expects a valid libc locale, for example: sv_SE.UTF-8
 locale = en_US.UTF-8
-
-; Position of the system tray window
-; If empty or undefined, tray support will be disabled
-; NOTE: A center aligned tray will cover center aligned modules
-;
-; Available positions:
-;   left
-;   center
-;   right
-;   none
-tray-position = center
-tray-reparent = true
-
-; If true, the bar will not shift its
-; contents when the tray changes
-tray-detached = false
-
-; Tray icon max size
-tray-maxsize = 16
-
-; DEPRECATED! Since 3.3.0 the tray always uses pseudo-transparency
-; Enable pseudo transparency
-; Will automatically be enabled if a fully transparent
-; background color is defined using `tray-background`
-tray-transparent = false
-
-; Background color for the tray container 
-; ARGB color (e.g. #f00, #ff992a, #ddff1023)
-; By default the tray container will use the bar
-; background color.
-tray-background = ${color.bg}
-
-; Tray offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
-tray-offset-x = 0
-tray-offset-y = 0
-
-; Pad the sides of each tray icon
-tray-padding = 0
-
-; Scale factor for tray clients
-tray-scale = 1.0
 
 ; Restack the bar window and put it above the
 ; selected window manager's root
