--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -1,3 +1,5 @@
+backend = "glx";
+
 shadow = true;
 no-dnd-shadow = true;
 no-dock-shadow = true;
@@ -6,19 +8,17 @@ shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
 shadow-exclude = [ "name = 'Notification'", "class_g = 'Conky'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'", "_GTK_FRAME_EXTENTS@:c" ];
-menu-opacity = 0.8;
-inactive-opacity = 0.8;
+
+menu-opacity = 0.5;
+inactive-opacity = 0.5;
 active-opacity = 1;
-frame-opacity = 0.7;
+frame-opacity = 0.3;
 inactive-opacity-override = false;
 alpha-step = 0.06;
-blur-kern = "3x3box";
-blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'", "_GTK_FRAME_EXTENTS@:c" ];
 fading = true;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 fade-exclude = [ ];
-backend = "xrender";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
@@ -39,9 +39,13 @@ wintypes :
   {
     fade = true;
     shadow = true;
-    opacity = 0.75;
+    opacity = 0.55;
     focus = true;
   };
 };
+
 blur-background = true;
 blur-background-frame = true;
+blur-method = "kawase";
+blur-strength = 15;
+blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'", "_GTK_FRAME_EXTENTS@:c" ];
