--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,8 +1,8 @@
 copy_on_select             yes
 rectangle_select_modifiers alt
-background_opacity         0.9
+background_opacity         0.5
 font_size 16.0
-font_family      LigaHack
+font_family      LigaHack Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
