--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,7 +2,7 @@ copy_on_select             yes
 rectangle_select_modifiers alt
 background_opacity         0.5
 font_size 16.0
-font_family      LigaHack Nerd Font Mono
+font_family      LigaHack Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
