--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -144,11 +144,11 @@ font-0 = "苹方\-简:style=Medium:size=10;3"
 ; Icons Fonts
 font-1 = icomoon\-feather:style=Medium:size=10;3
 ; Powerline Glyphs
-font-2 = "LigaHack Nerd Font Mono:style=Medium:size=16;3"
+font-2 = "LigaHack Nerd Font:style=Medium:size=16;3"
 ; Larger font size for bar fill icons
-font-3 = "LigaHack Nerd Font Mono:style=Medium:size=12;3"
+font-3 = "LigaHack Nerd Font:style=Medium:size=12;3"
 ; Smaller font size for shorter spaces
-font-4 = "LigaHack Nerd Font Mono:style=Medium:size=7;3"
+font-4 = "LigaHack Nerd Font:style=Medium:size=7;3"
 
 
 ; Modules are added to one of the available blocks
