--- a/.config/youtube-dl/config
+++ b/.config/youtube-dl/config
@@ -1,3 +1,3 @@
---proxy socks5://192.168.2.1:1081/
+--proxy socks5://localhost:1081/
 -o ~/Downloads/%(title)s.%(ext)s
 -f 'bestvideo[ext=mp4]+bestaudio[ext=m4a]/best[ext=mp4]/best'
