--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -180,9 +180,9 @@ font-4 = "LigaHack Nerd Font:style=Medium:size=7;3"
 inherit = bar/main
 
 ;modules-left = menu title right-end-top
-modules-left = weather right-end-bottom left-end-top cpu_bar memory_bar filesystem_bar right-end-bottom
+modules-left = weather right-end-bottom left-end-top filesystem_bar right-end-bottom left-end-top temperature right-end-bottom
 modules-center = left-end-bottom workspaces right-end-top left-end-bottom colors-switch right-end-top
-modules-right = left-end-top temperature right-end-bottom left-end-top network right-end-bottom left-end-top date sysmenu
+modules-right =left-end-top network right-end-bottom left-end-top cpu_bar memory_bar right-end-bottom left-end-top date sysmenu
 enable-ipc = true
 
 ;[bar/bottom]
