--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -340,7 +340,7 @@ type = internal/fs
 
 ; Mountpoints to display
 mount-0 = /
-;;mount-1 = /home
+mount-1 = /home
 ;;mount-2 = /var
 
 ; Seconds to sleep between updates
