--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -1,20 +1,15 @@
 backend = "glx";
 
 shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
-clear-shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
 shadow-exclude = [ "name = 'Notification'", "class_g = 'Conky'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'", "_GTK_FRAME_EXTENTS@:c" ];
 
-menu-opacity = 0.5;
 inactive-opacity = 0.5;
 active-opacity = 1;
 frame-opacity = 0.3;
 inactive-opacity-override = false;
-alpha-step = 0.06;
 fading = true;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
@@ -24,18 +19,25 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = "none";
+vsync = false;
 dbe = false;
-paint-on-overlay = true;
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
 glx-copy-from-front = false;
-glx-swap-method = "undefined";
-wintypes : 
+use-damage = true;
+wintypes :
 {
-  tooltip : 
+  dock :
+  { shadow = false; }
+  dnd :
+  { shadow = false; }
+  popup_menu :
+  { opacity = 0.9; }
+  dropdown_menu :
+  { opacity = 1; }
+  tooltip :
   {
     fade = true;
     shadow = true;
@@ -46,6 +48,6 @@ wintypes :
 
 blur-background = true;
 blur-background-frame = true;
-blur-method = "kawase";
+blur-method = "dual_kawase";
 blur-strength = 15;
 blur-background-exclude = [ "window_type = 'dock'", "window_type = 'desktop'", "_GTK_FRAME_EXTENTS@:c" ];
